--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <div class="container">
          <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">Street</a></li>
-                <li><a href="#contact">Travel</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="street.html">Street</a></li>
+                <li><a href="travel.html">Travel</a></li>
                 <li><a href=mailto:danforsyth1@gmail.com>Contact</a></li>
               </ul>
           </div><!--/.nav-collapse -->
