--- a/index.html
+++ b/index.html
@@ -15,13 +15,26 @@
     <link href="./css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
+    <link href="./css/starter-template.css" rel="stylesheet">
+
+    <!--JS Slider-->
+    <link rel="stylesheet" href="./css/ideal-image-slider.css">
+    <link rel="stylesheet" href="./css/default.css">
+    
+
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+    <style media="screen">
+  #slider {
+    max-width: 700px;
+    margin: 50px auto;
+  }
+  </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -55,15 +68,29 @@
           </div><!--/.nav-collapse -->
         </nav>
 
-    <img src="./img/home.png" class="img-responsive center-block" alt="Responsive image">
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+    <img src="./img/h.png" class="img-responsive center-block" alt="Responsive image">
+
+    <br>
+    <br>
+
+ 
+<!--Slider JS-->
+    <script src="./js/ideal-image-slider.js"></script>
+
+    <script>
+    var slider = new IdealImageSlider.Slider('#slider');
+    slider.start();
+    </script>
+    
+
+    <!-- jQuery -->
+    <script src="./js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="./js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
