--- a/travel.html
+++ b/travel.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>3 Col Portfolio - Start Bootstrap Template</title>
+    <title>Travel</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
@@ -64,9 +64,14 @@
 </div>
 
 <div id="slider" class="ideal-image-slider iis-effect-slide">
+    
     <img src="./img/home.png" role="tabpanel" aria-hidden="true" data-src-2x="img/1@2x.jpg" alt="Slide 1" />
 
     <img data-src="./img/test.png" role="tabpanel" aria-hidden="true" data-src-2x="img/2@2x.jpg" src="" alt="Slide 2" />
+    
+
+    <img data-src="./img/h.png" role="tabpanel" aria-hidden="true" data-src-2x="img/3@2x.jpg" src="" alt="Slide 3" />
+
     </div>
 
     <br>
