Mobile slider fix

--- a/street.html
+++ b/street.html
@@ -65,12 +65,12 @@
 
 <div id="slider" class="ideal-image-slider iis-effect-slide">
     
-    <img src="./img/home.png" role="tabpanel" aria-hidden="true" data-src-2x="img/1@2x.jpg" alt="Slide 1" />
+  <img src="./img/home.png" role="tabpanel" aria-hidden="true" data-src-2x="./img/home.png" alt="Slide 1" />
 
-    <img data-src="./img/test.png" role="tabpanel" aria-hidden="true" data-src-2x="img/2@2x.jpg" src="" alt="Slide 2" />
+    <img data-src="./img/test.png" role="tabpanel" aria-hidden="true" data-src-2x="./img/test.png" src="" alt="Slide 2" />
     
 
-    <img data-src="./img/h.png" role="tabpanel" aria-hidden="true" data-src-2x="img/3@2x.jpg" src="" alt="Slide 3" />
+    <img data-src="./img/h.png" role="tabpanel" aria-hidden="true" data-src-2x="./img/h.png" src="" alt="Slide 3" />
 
     </div>
 
