--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 
-    <img src="./img/h.png" class="img-responsive center-block" alt="Responsive image">
+    <img src="./img/home.png" class="img-responsive center-block" alt="Responsive image">
 
     <br>
     <br>
